- updating the workflowResult object to deliver richer results (shown in IdentifyMigrateTemplate) - updating WorkflowTemplateHelper to deliver the underlying authority information